ros2_ws/log/build_2022-04-03_22-55-02/wallfollow_pkg/stderr.log
  File "/home/user/ros2_ws/install/wallfollow_pkg/lib/python3.8/site-packages/wallfollow_pkg/find_wall_server.py", line 83
    break
    ^
SyntaxError: 'break' outside loop

